--- a/index.html
+++ b/index.html
@@ -2,96 +2,116 @@
 <html>
 
 <head>
-<script src="src/jquery.2.1.4.min.js"></script>
-<script src="src/uikit/js/uikit.js"></script>
-<link rel="stylesheet" href="src/uikit/css/uikit.css" />
-<link rel="stylesheet" href="src/uikit/css/uikit.gradient.css" />
-<script>
-$(document).ready(function() {
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="src/jquery.2.1.4.min.js"></script>
+	<script src="src/uikit/js/uikit.js"></script>
+	<script src="src/uikit/js/components/sticky.js"></script>
+	<link rel="stylesheet" href="src/uikit/css/uikit.css" />
+	<!-- <link rel="stylesheet" href="src/uikit/css/uikit.gradient.css" /> -->
+	<link rel="stylesheet" href="src/uikit/css/uikit.almost-flat.css" />
+	<script>
+	$(document).ready(function() {
 
-	$.fn.cal = function() {
-		var total = 0;
+		$.fn.cal = function() {
+			var total = 0;
 
-		$(".item").each(function() {
-			total = total + ($(this).find('.value').val() * $(this).find('.units').val());
-		});
+			$(".item").each(function() {
+				total = total + ($(this).find('.value').val() * $(this).find('.units').val());
+			});
 
-		return total;
-	};
+			return total;
+		};
 
-	$.fn.update_total = function(total) {
-		var budget = $('#budget').val();
-		if (total > budget) {
-			$('#total').css('color','red');
-		}
-		else {
-			$('#total').css('color','green');
-		}
-		$('#total').html(total);
-	};
+		$.fn.update_total = function() {
+			var total  = $(this).cal();
+			var budget = $('#budget').val();
+			if (total > budget) {
+				$('#total').css('color','red');
+			}
+			else {
+				$('#total').css('color','green');
+			}
+			$('#total').html(total);
+		};
 
-	$(this).update_total($(this).cal());
+		var updateTotal = $.fn.update_total;
 
-	$("#add-button").on('click', function() {
-		var $item = $('<div>', {class: "item"});
-		var $nameInput = $('<input />', {type: "text", placeholder: "Name"});
-		var $valueInput = $('<input />', {type: "number", class: "value", placeholder: "0.00"});
-		var $unitsInput = $('<input />', {type: "number", class: "units", placeholder: "1"}).val(1);
+		$.fn.add_item = function() {
+			var $item = $('<div>', {class: "item"});
+			var $nameInput = $('<input />', {type: "text", class: "uk-width-4-10", placeholder: "Name"});
+			var $valueInput = $('<input />', {type: "number", class: "value uk-width-2-10", placeholder: "0.00"});
+			var $unitsInput = $('<input />', {type: "number", class: "units uk-width-2-10", placeholder: "1"}).val(1);
 
-		$("<div>", {class: "item"})
+			$("<div>", {class: "item"})
 			.append($nameInput)
 			.append(" $")
 			.append($valueInput)
 			.append(" x")
 			.append($unitsInput)
+			.append($("<a>").addClass("uk-close remove"))
 			.appendTo("#items");
-	});
+		};
 
-	$(document).on('focusout', '.value', function() {
-		var t = $(this).cal();
-		$(this).update_total(t);
-	});
+		var addItem = $.fn.add_item;
 
-	$(document).on('focusout', '.units', function() {
-		var t = $(this).cal();
-		$(this).update_total(t);
-	});
+		updateTotal();
 
-});
-</script>
+		// $("#add-button").on('click', addItem);
+
+		$(document).on('focusout', '.value', updateTotal);
+		$(document).on('focusout', '.units', updateTotal);
+		$(document).on('focusout', '#budget', updateTotal);
+
+		$(document).on('click', '.remove', function() {
+			$(this).parent().remove();
+			updateTotal();
+			checkEmpty();
+		});
+
+		var checkEmpty = function () {
+			var empty_check = 0;
+			$('.value, .units').each(function(){
+				if ($(this).val() == '') {
+					empty_check++;
+				}
+			});
+
+			if (empty_check == 0) {
+				addItem();
+			}
+		};
+
+		$(document).change(checkEmpty);
+
+	});
+	</script>
 </head>
 
 <body>
 
-	<div class="uk-block uk-block-default">
-		<div class="uk-container uk-container-center">
-			<div class="uk-grid">
-				<div class="uk-width-medium-1-2 uk-container-center">
-					<div class="uk-panel uk-panel-box uk-panel-box-primary">
-						<div class="uk-panel-title">Budget</div>
-						<div class="uk-form">
-							$<input type="number" class="uk-form-large" id="budget" placeholder="0.00" step="0.05"/>
-						</div>
-						<hr>
-						<div class="uk-panel-title">Items</div>
-						<div class="uk-form" id="items">
-							<div class="item">
-								<input type="text" placeholder="Name"/>
-								$<input type="number" class="value" placeholder="0.00"/>
-								x<input type="number" class="units" placeholder="Qty" value="1"/>
-							</div>
-						</div>
-						<hr>
-						<button id="add-button" class="uk-button uk-button-primary">Add Item</button>
-						<hr>
-						<div class="uk-text-large">Total: <span id="total"></span></div>
-					</div>
-				</div>
+
+<div data-uk-sticky  style="z-index: 1;">
+	<div class="uk-panel uk-panel-box uk-panel-box-primary">
+		<p class="uk-heading-large uk-text-center">Shopping Calculator</p>
+		<div class="uk-form">
+			<span>Budget $<input type="number" class="uk-width-6-10" id="budget" placeholder="0.00" step="0.05"/></span>
+		</div>
+		<div>
+			Total: $<span id="total"></span>
+		</div>
+	</div>
+</div>
+
+	<div class="uk-panel uk-panel-box uk-panel-box-primary">
+		<div class="uk-form" id="items">
+			<div class="item">
+				<input type="text" placeholder="Name" class="uk-width-4-10"/>
+				$<input type="number" class="value uk-width-2-10" placeholder="0.00"/>
+				x<input type="number" class="units uk-width-2-10" placeholder="Qty" value="1"/>
 			</div>
 		</div>
 	</div>
-
-<div>
 
 </body>
 
